dev/assocoiate-route.tf
resource "aws_route_table_association" "public_assoc" {
    subnet_id = aws_subnet.project_public_subnet.id
    route_table_id = aws_route_table.public_route.id
}
